fix wrap in bs_idea_inner, open links in new tab/window from bs_idea, update notify monitrc

--- a/public/stylesheets/sass/idea.sass
+++ b/public/stylesheets/sass/idea.sass
@@ -18,6 +18,14 @@ $help_tag: #f3973a
 	:-khtml-opacity = !opacity
 	:opacity = !opacity
 
+.wordwrap
+	white-space: pre-wrap /* css-3 */
+	white-space: -moz-pre-wrap  /* Mozilla, since 1999 */
+	white-space: -pre-wrap /* Opera 4-6 */
+	white-space: -o-pre-wrap /* Opera 7 */
+	word-wrap: break-word /* Internet Explorer 5.5+ */ 
+	
+
 $page_width: 980px
 $idea_page_width: 778px
 $side_bar_width: 180px
